Added Repository pattern

--- a/BulkyBookWeb/Views/Categories/Create.cshtml
+++ b/BulkyBookWeb/Views/Categories/Create.cshtml
@@ -20,7 +20,7 @@
             <span class="text-danger" asp-validation-for="DisplayOrder"></span>
         </div>
         <div style="text-align:center">
-            <button type="submit" class="btn-primary btn-primary">
+            <button type="submit" class="btn btn-secondary">
                 <i class="bi bi-plus-circle"></i> Create
             </button>
             <a asp-controller="Categories" asp-action="Index" class="btn btn-secondary">
