--- a/BulkyBookWeb/Areas/Admin/Views/Categories/Delete.cshtml
+++ b/BulkyBookWeb/Areas/Admin/Views/Categories/Delete.cshtml
@@ -18,8 +18,10 @@
         <label asp-for="DisplayOrder"></label>
         <input asp-for="DisplayOrder" contenteditable="false"/>
     </div>
-    <button type="submit" class="btn btn-primary" asp-route-category="@Model"><i class="bi bi-trash3"></i> Delete</button>
-    <a asp-controller="Categories" asp-action="Delete" class="btn btn-secondary">
+    <button type="submit" class="btn btn-primary" asp-route-category="@Model">
+        <i class="bi bi-trash3"></i> Delete
+    </button>
+    <a asp-controller="Categories" asp-action="Index" class="btn btn-secondary">
         <i class="bi bi-skip-backward-circle-fill"></i> Back To List
     </a>
 </form>
