--- a/BulkyBookWeb/Areas/Admin/Views/CoverTypes/Index.cshtml
+++ b/BulkyBookWeb/Areas/Admin/Views/CoverTypes/Index.cshtml
@@ -2,32 +2,61 @@
 
 @{
     ViewData["Title"] = "Cover Type Index";
+
 }
 
-<h1>Index</h1>
+@if (TempData["success"] != null)
+{
+}
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
+<div class="container p-3">
+    <div class="row pt-4">
+        <div class="col-12">
+            <h2 class="text-primary">Cover Types</h2>
+        </div>
+    </div>
+</div>
+
+@if (Model.Count > 0)
+{
+    <table class="table table-bordered table-striped" style="width:100%">
+        <thead>
             <tr>
-                <td>
-                    @item.Name
-                </td>
-                <td>
-                    @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                    @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                    @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-                </td>
+                <th>
+                    Cover Type Name
+                </th>
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td width="100%">
+                        <label>@item.Name</label>
+                    </td>
+
+                    <td>
+                        <a class="btn btn-warning"
+                   asp-controller="CoverTypes" asp-action="Edit" asp-route-id="@item.Id">
+                            <i class="bi bi-pencil"></i> Edit
+                        </a>
+                    </td>
+                    <td>
+                        <a class="btn btn-danger"
+                   asp-controller="CoverTypes" asp-action="Delete" asp-route-id="@item.Id">
+                            <i class="bi bi-trash3"></i> Delete
+                        </a>
+                    </td>
+                </tr>
+            }
+
+        </tbody>
+    </table>
+}
+
+
+<div class="col-12" style="text-align:center">
+    <a asp-controller="CoverTypes" asp-action="Create" class="btn-primary btn">
+        <i class="bi bi-plus-circle"></i> Create a new Cover Type
+    </a>
+</div>
