--- a/BulkyBookWeb/Views/Shared/_Layout.cshtml
+++ b/BulkyBookWeb/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                             <a class="nav-link text-dark" asp-area="Admin" asp-controller="Categories" asp-action="Index">Categories</a>
                         </li>
                         <li class="class-item">
-
+                            <a class="nav-link text-dark" asp-area="Admin" asp-controller="CoverTypes" asp-action="Index">Cover Types</a>
                         </li>
                     </ul>
                 </div>
