- Added ProductViewModel structure

--- a/BulkyBookWeb/Areas/Admin/Views/CoverTypes/Delete.cshtml
+++ b/BulkyBookWeb/Areas/Admin/Views/CoverTypes/Delete.cshtml
@@ -11,7 +11,7 @@
         <label asp-for="Name"></label>
         <input asp-for="Name" contenteditable="false" />
     </div>
-    <button class="btn btn-primary" type="submit" asp-route-covertypes="@Model">
+    <button class="btn btn-primary" type="submit">
         <i class="bi bi-trash3"></i> Delete
     </button>
     <a asp-controller="CoverTypes" asp-action="Index" class="btn btn-primary">
