--- a/BulkyBookWeb/Areas/Admin/Views/Products/Index.cshtml
+++ b/BulkyBookWeb/Areas/Admin/Views/Products/Index.cshtml
@@ -25,6 +25,6 @@
 
 <div class="col-12" style="text-align:center">
     <a asp-controller="Products" asp-action="Upsert" class="btn-primary btn">
-        <i class="bi bi-plus-circle"></i> Create a new Cover Type
+        <i class="bi bi-plus-circle"></i> Create a new Product
     </a>
 </div>
