--- a/BulkyBookWeb/Areas/Admin/Views/Categories/Delete.cshtml
+++ b/BulkyBookWeb/Areas/Admin/Views/Categories/Delete.cshtml
@@ -18,7 +18,7 @@
         <label asp-for="DisplayOrder"></label>
         <input asp-for="DisplayOrder" contenteditable="false"/>
     </div>
-    <button type="submit" class="btn btn-primary" asp-route-category="@Model">
+    <button type="submit" class="btn btn-primary" >
         <i class="bi bi-trash3"></i> Delete
     </button>
     <a asp-controller="Categories" asp-action="Index" class="btn btn-secondary">
