--- a/BulkyBookWeb/Areas/Admin/Views/Products/Upsert.cshtml
+++ b/BulkyBookWeb/Areas/Admin/Views/Products/Upsert.cshtml
@@ -5,7 +5,7 @@
 
 <form method="post" asp-controller="Products" asp-action="Upsert" enctype="multipart/form-data">
     <div class="row pb-2">
-        <h2 class="text-primary">Edit Products</h2>
+        <h2 class="text-primary">@(Model.Product.Id!=0?"Update":"Create") Product</h2>
     </div>
 
     <div class="mb-3">
@@ -50,7 +50,7 @@
     </div>
     <div class="mb-3">
         <label asp-for="Product.ImageUrl"></label>
-        <input type="file" class="form-control"/>
+        <input type="file" class="form-control" id="ImageFileInput"/>
         <span asp-validation-for="Product.ImageUrl" class="text-danger"></span>
     </div>
     <div class="mb-3">
@@ -69,9 +69,22 @@
         <span asp-validation-for="Product.CoverTypeId" class="text-danger"></span>
     </div>
 
-    <button class="btn btn=primary" type="submit">
-        <i class="bi bi-pencil"></i> Edit
-    </button>
+    
+    
+         @if (Model.Product.Id != 0)
+        {
+            <button class="btn btn=primary" type="submit">
+                <i class="bi bi-pencil"></i>Edit
+            </button>
+        }
+        else
+        {
+            <button class="btn btn=primary" type="submit" onclick="return validateInput()">
+                <i class="bi bi-pencil"></i>Create
+            </button>
+        }
+
+    
 
     <a asp-controller="Products" asp-action="Index" class="btn btn-primary">
         <i class="bi bi-skip-backward-circle-fill"></i> Back To List
@@ -81,4 +94,18 @@
 @*Adding client side validation*@
 @section Scripts{
     <partial name="_ValidationScriptsPartial" />
+    <script>
+        function validateInput(){
+            if($('#ImageFileInput')[0].value === ""){//the [0] return an HTML DOM object, instead of a jquery object without it
+                //sweet alert code extracted from https://sweetalert2.github.io/#examples
+                Swal.fire({
+                  icon: 'error',
+                  title: 'Oops...',
+                  text: 'Please upload an image!'
+                });
+                return false;
+            }
+            return true;
+        }
+    </script> 
 }
