--- a/BulkyBookWeb/Areas/Admin/Views/Products/Index.cshtml
+++ b/BulkyBookWeb/Areas/Admin/Views/Products/Index.cshtml
@@ -8,7 +8,7 @@
 
 @if (Model.Count > 0)
 {
-    <table class="table table-bordered table-striped" style="width:100%">
+    <table id="tblData" class="table table-bordered table-striped" style="width:100%">
         <thead>
             <tr>
                 <th> Title </th>
@@ -28,3 +28,7 @@
         <i class="bi bi-plus-circle"></i> Create a new Product
     </a>
 </div>
+
+@section Scripts{
+    <script src="~/js/product.js"></script>
+}
