--- a/BulkyBookWeb/Areas/Admin/Views/Products/Upsert.cshtml
+++ b/BulkyBookWeb/Areas/Admin/Views/Products/Upsert.cshtml
@@ -5,86 +5,90 @@
 
 <form method="post" asp-controller="Products" asp-action="Upsert" enctype="multipart/form-data">
     <div class="row pb-2">
-        <h2 class="text-primary">@(Model.Product.Id!=0?"Update":"Create") Product</h2>
+        <div class="border p-3 mt-4 row">
+            <div class="col-12 pb-2">
+                <h2 class="text-primary">@(Model.Product.Id!=0?"Update":"Create") Product</h2>
+            </div>
+
+            <div class="mb-3 col-10">
+                <label asp-for="Product.Title"></label>
+                <input asp-for="Product.Title" class="form-control" />
+                <span asp-validation-for="Product.Title" class="text-danger"></span>
+            </div>
+
+            <div class="mb-3">
+                <label asp-for="Product.Description"></label>
+                <textarea asp-for="Product.Description" rows="3" class="form-control"></textarea>
+                <span asp-validation-for="Product.Title" class="text-danger"></span>
+            </div>
+            <div class="mb-3 col-6">
+                <label asp-for="Product.ISBN"></label>
+                <input asp-for="Product.ISBN" class="form-control" />
+                <span asp-validation-for="Product.ISBN" class="text-danger"></span>
+            </div>
+            <div class="mb-3 col-6">
+                <label asp-for="Product.Author"></label>
+                <input asp-for="Product.Author" class="form-control" />
+                <span asp-validation-for="Product.Author" class="text-danger"></span>
+            </div>
+            <div class="mb-3 col-6">
+                <label asp-for="Product.ListPrice"></label>
+                <input asp-for="Product.ListPrice" class="form-control" />
+                <span asp-validation-for="Product.ListPrice" class="text-danger"></span>
+            </div>
+            <div class="mb-3 col-6">
+                <label asp-for="Product.Price"></label>
+                <input asp-for="Product.Price" class="form-control" />
+                <span asp-validation-for="Product.Price" class="text-danger"></span>
+            </div>
+            <div class="mb-3 col-6">
+                <label asp-for="Product.Price50"></label>
+                <input asp-for="Product.Price50" class="form-control" />
+                <span asp-validation-for="Product.Price50" class="text-danger"></span>
+            </div>
+            <div class="mb-3 col-6">
+                <label asp-for="Product.Price100"></label>
+                <input asp-for="Product.Price100" class="form-control" />
+                <span asp-validation-for="Product.Price100" class="text-danger"></span>
+            </div>
+            <div class="mb-3 col-6">
+                <label asp-for="Product.ImageUrl"></label>
+                <input type="file" class="form-control" id="formFile" name="formFile"/>
+                @*<span asp-validation-for="Product.ImageUrl" class="text-danger"></span>*@
+            </div>
+            <div class="mb-3 col-6">
+                <label asp-for="Product.CategoryId"></label>
+                <select asp-for="Product.CategoryId" asp-items="@Model.CategoryList" class="form-select">
+                    <option disabled selected>Select Category</option>
+                </select>
+                <span asp-validation-for="Product.CategoryId" class="text-danger"></span>
+            </div>
+            <div class="mb-3 col-6">
+                <label asp-for="Product.CoverTypeId"></label>
+                <select asp-for="Product.CoverTypeId"
+                        asp-items="@Model.CoverTypeList" class="form-select">
+                    <option disabled selected>Select Cover Type</option>
+                </select>
+                <span asp-validation-for="Product.CoverTypeId" class="text-danger"></span>
+            </div>
+
+
+
+            @if (Model.Product.Id != 0)
+            {
+                <button class="btn btn=primary" type="submit">
+                    <i class="bi bi-pencil"></i>Edit
+                </button>
+            }
+            else
+            {
+                <button class="btn btn=primary" type="submit" onclick="return validateInput()">
+                    <i class="bi bi-pencil"></i>Create
+                </button>
+            }
+        </div>
     </div>
 
-    <div class="mb-3">
-        <input asp-for="Product.Title" class="form-control"/>
-        <span asp-validation-for="Product.Title" class="text-danger"></span>
-    </div>
-    
-    <div class="mb-3">
-        <label asp-for="Product.Description"></label>
-        <textarea asp-for="Product.Description" rows="3" class="form-control"></textarea>
-        <span asp-validation-for="Product.Title" class="text-danger"></span>
-    </div>
-    <div class="mb-3">
-        <label asp-for="Product.ISBN"></label>
-        <input asp-for="Product.ISBN" class="form-control"/>
-        <span asp-validation-for="Product.ISBN" class="text-danger"></span>
-    </div>
-    <div class="mb-3">
-        <label asp-for="Product.Author"></label>
-        <input asp-for="Product.Author" class="form-control" />
-        <span asp-validation-for="Product.Author" class="text-danger"></span>
-    </div>
-    <div class="mb-3">
-        <label asp-for="Product.ListPrice"></label>
-        <input asp-for="Product.ListPrice" class="form-control"/>
-        <span asp-validation-for="Product.ListPrice" class="text-danger"></span>
-    </div>
-    <div class="mb-3">
-        <label asp-for="Product.Price"></label>
-        <input asp-for="Product.Price" class="form-control"/>
-        <span asp-validation-for="Product.Price" class="text-danger"></span>
-    </div>
-    <div class="mb-3">
-        <label asp-for="Product.Price50"></label>
-        <input asp-for="Product.Price50" class="form-control"/>
-        <span asp-validation-for="Product.Price50" class="text-danger"></span>
-    </div>
-    <div class="mb-3">
-        <label asp-for="Product.Price100"></label>
-        <input asp-for="Product.Price100" class="form-control"/>
-        <span asp-validation-for="Product.Price100" class="text-danger"></span>
-    </div>
-    <div class="mb-3">
-        <label asp-for="Product.ImageUrl"></label>
-        <input type="file" class="form-control" id="ImageFileInput"/>
-        <span asp-validation-for="Product.ImageUrl" class="text-danger"></span>
-    </div>
-    <div class="mb-3">
-        <label asp-for="Product.CategoryId"></label>
-        <select asp-for="Product.CategoryId" asp-items="@Model.CategoryList" class="form-select">
-            <option disabled selected>Select Category</option>
-        </select>
-        <span asp-validation-for="Product.CategoryId" class="text-danger"></span>
-    </div>
-    <div class="mb-3">
-        <label asp-for="Product.CoverTypeId"></label>
-        <select asp-for="Product.CoverTypeId" 
-        asp-items="@Model.CoverTypeList" class="form-select">
-            <option disabled selected>Select Cover Type</option>
-        </select>  
-        <span asp-validation-for="Product.CoverTypeId" class="text-danger"></span>
-    </div>
-
-    
-    
-         @if (Model.Product.Id != 0)
-        {
-            <button class="btn btn=primary" type="submit">
-                <i class="bi bi-pencil"></i>Edit
-            </button>
-        }
-        else
-        {
-            <button class="btn btn=primary" type="submit" onclick="return validateInput()">
-                <i class="bi bi-pencil"></i>Create
-            </button>
-        }
-
-    
 
     <a asp-controller="Products" asp-action="Index" class="btn btn-primary">
         <i class="bi bi-skip-backward-circle-fill"></i> Back To List
@@ -93,19 +97,21 @@
 
 @*Adding client side validation*@
 @section Scripts{
-    <partial name="_ValidationScriptsPartial" />
-    <script>
-        function validateInput(){
-            if($('#ImageFileInput')[0].value === ""){//the [0] return an HTML DOM object, instead of a jquery object without it
-                //sweet alert code extracted from https://sweetalert2.github.io/#examples
-                Swal.fire({
-                  icon: 'error',
-                  title: 'Oops...',
-                  text: 'Please upload an image!'
-                });
-                return false;
-            }
-            return true;
+<partial name="_ValidationScriptsPartial" />
+<script>
+    function validateInput(){
+        if($('#ImageFileInput')[0].value === ""){//the [0] return an HTML DOM object, instead of a jquery object without it
+            //sweet alert code extracted from https://sweetalert2.github.io/#examples
+            Swal.fire({
+              icon: 'error',
+              title: 'Oops...',
+              text: 'Please upload an image!'
+            });
+            return false;
         }
-    </script> 
+        return true;
+    }
+
+
+</script>
 }
